--- a/roles/addon-remarkable/templates/sync_rmdata.sh.j2
+++ b/roles/addon-remarkable/templates/sync_rmdata.sh.j2
@@ -16,6 +16,11 @@ mkdir -p .raw
 pushd .raw
 ~/.pqrs/bin/rmapi mget -i .
 
+# Get the list of currently present documents and delete stale archives
+rmapi find . | grep '^\[f' | cut -d' ' -f2- | sed 's/$/.zip/' | sed 's/^/\./' > /tmp/rmsync-doclist
+find . -type f -name '*.zip' | xargs -I{} bash -c 'if [[ -z `cat /tmp/rmsync-doclist | grep -F "{}"` ]]; then rm "{}"; fi'
+find . -type d -empty | xargs -I{} rmdir "{}"
+
 # Get the timestamp of the last successful sync
 if [[ -f .last-sync ]]
 then
