addon-remarkable: Absolute path to rmapi for the cronjob

--- a/roles/addon-remarkable/templates/sync_rmdata.sh.j2
+++ b/roles/addon-remarkable/templates/sync_rmdata.sh.j2
@@ -20,7 +20,7 @@ pushd .raw
 ~/.pqrs/bin/rmapi mget -i .
 
 # Get the list of currently present documents and delete stale archives
-rmapi find . | grep '^\[f' | cut -d' ' -f2- | sed 's/$/.zip/' | sed 's/^/\./' > /tmp/rmsync-doclist
+~/.pqrs/bin/rmapi find . | grep '^\[f' | cut -d' ' -f2- | sed 's/$/.zip/' | sed 's/^/\./' > /tmp/rmsync-doclist
 find . -type f -name '*.zip' | xargs -I{} bash -c 'if [[ -z `cat /tmp/rmsync-doclist | grep -F "{}"` ]]; then rm "{}"; fi'
 find . -type d -empty | xargs -I{} rmdir "{}"
 
